<resources>
    <string name="app_name" translatable="false">Murtijapur Work Force</string>
    <string name="title_activity_home_navigation" translatable="false">HomeNavigation</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">MWF</string>
    <string name="nav_header_subtitle" translatable="false">1234567890</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>


    <string name="searchView" translatable="false">Search by...</string>


    <string name="menu_communicate" translatable="false">Communicate</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_about_us" translatable="false">About Us</string>
    <string name="menu_contact_us" translatable="false">Contact Us</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="menu_rate" translatable="false">Rate this app</string>
    <string name="menu_privacy_policy" translatable="false">Privacy-policy</string>
    <string name="menu_help" translatable="false">Help</string>
    <string name="home_title_main">Increase your reliability life \nand make\'s life easy</string>
    <string name="language">Language</string>


    <style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">
        <!-- Gets rid of the search icon -->=
        <!-- Gets rid of the "underline" in the text -->
        <item name="queryBackground">@color/white</item>
        <!-- Gets rid of the search icon when the SearchView is expanded -->
        <item name="searchHintIcon">@null</item>
        <!-- The hint text that appears when the user has not typed anything -->
        <item name="queryHint">@string/searchView</item>
    </style>

    <style name="AppSearchView" parent="Widget.AppCompat.SearchView">
        <!-- Text Size -->
        <item name="android:textSize">@dimen/material_emphasis_disabled_background</item>
        <!-- Query Text Color -->
        <item name="android:textColorPrimary">@color/white</item>
        <!-- Hint Color -->
        <item name="android:textColorHint">@color/black</item>
        <!-- Icon Color -->
        <item name="android:tint">@color/black</item>
    </style>
</resources>