<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_contact_us" />
    </group>


    <item android:title="@string/menu_communicate">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_share"/>
            <item
                android:id="@+id/nav_rate_this_app"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_rate"/>
            </group>

        </menu>
    </item>

    <item android:title="@string/menu_privacy_policy">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_privacy_policy"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_privacy_policy"/>
            </group>

        </menu>
    </item>

    <item android:title="@string/menu_help">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_help"/>
            </group>

        </menu>
    </item>



</menu>